@@ -1,5 +1,15 @@
 #############################################################################
-BETA PUBLIC RELEASE VERSION 1.2.0       XX-XX-XX
+BETA PUBLIC RELEASE VERSION 1.2.1       X-XX-XX
+#############################################################################
+  - NEW FEATURES
+    * Updated documentation to include instructions for pdb2pka support
+    * Added ligand examples to examples/ directory
+
+  - BUG FIXES
+    * Fixed bug where a segmentation fault would occur in PropKa if the N
+      atom was not the first atom listed in the residue
+#############################################################################
+BETA PUBLIC RELEASE VERSION 1.2.0       1-31-07
 #############################################################################
   - NEW FEATURES
     * Added autoconf support for pdb2pka directory.
